--- a/public/index.html
+++ b/public/index.html
@@ -13,22 +13,35 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>Saytni ogirlayman deb umid qima baribir kodlarni olomaysan</noscript>
   <div id="root"></div>
+  <script src="../src/components/assents/js/bootstrap.min.js"></script>
+  <script src="../src/components/assents/js/function.js"></script>
+  <script src="../src/components/assents/js/gsap.min.js"></script>
+  <script src="../src/components/assents/js/isotope.min.js"></script>
+  <script>
+    let clickCounter = 0;
 
-  <!-- <script>
-    document.addEventListener('contextmenu', event => event.preventDefault());
-    document.addEventListener('keydown', event => {
-      if (event.key === "F12" || (event.ctrlKey && event.shiftKey && event.key === "I")) {
-        event.preventDefault();
-      }
+    document.addEventListener('click', () => {
+      clickCounter++;
+
+      fetch('https://backend-dedd.onrender.com/api/clickapp/api/track-click/', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+        },
+      })
+        .then(res => {
+          if (res.status === 403) {
+            alert("Вы были заблокированы за слишком частые клики.");
+            document.body.innerHTML = "<h1>Вы заблокированы.</h1>";
+          }
+        })
+        .catch(err => {
+          console.error("Ошибка отслеживания клика:", err);
+        });
     });
-    function greet(name) {
-      console.log("Hello, " + name + "!");
-    }
-    greet("User");
-    var _0x1a2b = ["\x48\x65\x6C\x6C\x6F\x2C\x20", "\x21"]; function greet(_0x1a3b) { console["\x6C\x6F\x67"](_0x1a2b[0] + _0x1a3b + _0x1a2b[1]) } greet("\x55\x73\x65\x72");
-  </script> -->
+  </script>
 </body>
 
 </html>
