--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>React App</title>
+  <title>Premiumdez.uz</title>
 </head>
 
 <body>
@@ -19,17 +19,17 @@
   <script src="../src/components/assents/js/function.js"></script>
   <script src="../src/components/assents/js/gsap.min.js"></script>
   <script src="../src/components/assents/js/isotope.min.js"></script>
-  <script>
+  <!-- <script>
     let clickCount = 0;
     let lastClick = Date.now();
 
     document.addEventListener('click', () => {
       clickCount++;
       const now = Date.now();
-      if (now - lastClick > 5000) clickCount = 1;
+      if (now - lastClick > 3000) clickCount = 1;
       lastClick = now;
 
-      fetch('https://backend-dedd.onrender.com/api/user_send/api/track-click/', {
+      fetch('http://127.0.0.1:8000/api/clickapp/api/track-click/', {
         method: 'POST'
       }).then(res => {
         if (!res.ok) {
@@ -38,7 +38,7 @@
         }
       });
     });
-  </script>
+  </script> -->
 </body>
 
 </html>
