--- a/public/index.html
+++ b/public/index.html
@@ -5,20 +5,32 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="csrf-token" content="{{ csrf_token }}">
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="stylesheet" href="../src/components/assents/css/all.min.css">
+  <link rel="stylesheet" href="../src/components/assents/css/animate.css">
+  <link rel="stylesheet" href="../src/components/assents/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../src/components/assents/css/custom.css">
+  <link rel="stylesheet" href="../src/components/assents/css/magnific-popup.css">
+  <link rel="stylesheet" href="../src/components/assents/css/mousecursor.css">
+  <link rel="stylesheet" href="../src/components/assents/css/slicknav.min.css">
+  <link rel="stylesheet" href="../src/components/assents/css/styles.css">
+  <link rel="stylesheet" href="../src/components/assents/css/swiper-bundle.min.css">
   <title>Premiumdez.uz</title>
 </head>
 
 <body>
   <noscript>Saytni ogirlayman deb umid qima baribir kodlarni olomaysan</noscript>
   <div id="root"></div>
-  <script src="../src/components/assents/js/bootstrap.min.js"></script>
+  <script src="%PUBLIC_URL%../src/components/assents/js/bootstrap.min.js"></script>
   <script src="../src/components/assents/js/function.js"></script>
   <script src="../src/components/assents/js/gsap.min.js"></script>
   <script src="../src/components/assents/js/isotope.min.js"></script>
+  <script src="../src//components/assents//js/anti-spam.min.js"></script>
+  <script src="https://www.google.com/recaptcha/api.js?render=6Lc7ioArAAAAABqG07AEM2vHo3gD2fe7dJOh8DtB"></script>
   <!-- <script>
     let clickCount = 0;
     let lastClick = Date.now();
@@ -37,6 +49,238 @@
           document.body.innerHTML = '<h1>Доступ закрыт</h1>';
         }
       });
+    });
+  </script> -->
+  <script>
+    const form = document.getElementById("contactForm");
+    const messageBox = document.getElementById("statusMessage");
+    const submitBtn = document.getElementById("submitBtn");
+    const retryBtn = document.getElementById("retryBtn");
+
+    let blockUntil = localStorage.getItem("block_until");
+
+    // Проверка блокировки при загрузке
+    if (blockUntil && Date.now() < parseInt(blockUntil)) {
+      startCountdown(parseInt(blockUntil));
+    }
+
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      messageBox.textContent = "";
+
+      if (Date.now() < parseInt(localStorage.getItem("block_until") || 0)) {
+        return;
+      }
+
+      submitBtn.disabled = true;
+
+      const formData = new FormData(form);
+      const jsonData = Object.fromEntries(formData.entries());
+
+      try {
+        const res = await fetch("http://127.0.0.1:8000/api/applicationapplications/", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(jsonData),
+        });
+
+        const data = await res.json();
+
+        if (res.ok) {
+          messageBox.textContent = "✅ Заявка успешно отправлена!";
+          form.reset();
+          const oneHourLater = Date.now() + 60 * 60 * 1000;
+          localStorage.setItem("block_until", oneHourLater);
+          startCountdown(oneHourLater);
+        } else if (res.status === 429) {
+          const detail = data.detail || "Вы уже отправляли заявку. Повторите через 1 час.";
+          messageBox.textContent = "❌ " + detail;
+
+          const match = detail.match(/(\d+)/);
+          if (match) {
+            const minutes = parseInt(match[1], 10);
+            const until = Date.now() + minutes * 60 * 1000;
+            localStorage.setItem("block_until", until);
+            startCountdown(until);
+          }
+        } else {
+          messageBox.textContent = "⚠️ Ошибка отправки формы.";
+        }
+      } catch (err) {
+        console.error(err);
+        messageBox.textContent = "⚠️ Ошибка соединения.";
+      } finally {
+        submitBtn.disabled = false;
+      }
+    });
+
+    retryBtn.addEventListener("click", async () => {
+      // Проверим, доступна ли разблокировка
+      const blockUntil = parseInt(localStorage.getItem("block_until") || 0);
+      if (Date.now() < blockUntil) {
+        messageBox.textContent = "⏳ Пожалуйста, дождитесь окончания времени.";
+        return;
+      }
+
+      try {
+        const res = await fetch("http://127.0.0.1:8000/api/unlock-ip/");
+        const data = await res.json();
+        messageBox.textContent = data.detail || "Разблокировано.";
+        localStorage.removeItem("block_until");
+        retryBtn.style.display = "none";
+        retryBtn.disabled = true;
+        submitBtn.disabled = false;
+      } catch (e) {
+        messageBox.textContent = "❌ Не удалось разблокировать.";
+      }
+    });
+
+    function startCountdown(untilTimestamp) {
+      retryBtn.style.display = "inline-block";
+      retryBtn.disabled = true; // по умолчанию кнопка недоступна
+      submitBtn.disabled = true;
+
+      const interval = setInterval(() => {
+        const now = Date.now();
+        const diff = untilTimestamp - now;
+
+        if (diff <= 0) {
+          clearInterval(interval);
+          localStorage.removeItem("block_until");
+          messageBox.textContent = "🟢 Вы можете повторить отправку.";
+          retryBtn.disabled = false; // разрешаем нажимать
+          submitBtn.disabled = false;
+          return;
+        }
+
+        const min = Math.floor(diff / 60000);
+        const sec = Math.floor((diff % 60000) / 1000);
+        messageBox.textContent = `⏳ Повторите через ${min} мин ${sec} сек`;
+      }, 1000);
+    }
+  </script>
+  <script>
+    function sendForm(token) {
+      const formData = {
+        full_name: document.querySelector('[name="full_name"]').value,
+        phone: document.querySelector('[name="phone"]').value,
+        address: document.querySelector('[name="address"]').value,
+        description: document.querySelector('[name="description"]').value,
+        recaptcha_token: token,
+      };
+
+      fetch("http://127.0.0.1:8000/api/applicationapplications/", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify(formData),
+      })
+        .then(res => res.json())
+        .then(data => {
+          alert("Успешно отправлено");
+        })
+        .catch(err => {
+          alert("Ошибка");
+        });
+    }
+
+  </script>
+  <script>
+    fetch('http://localhost:8000/swagger/')
+      .then(res => {
+        if (!res.ok) throw new Error("Закрыто");
+        return res.text();
+      })
+      .then(console.log)
+      .catch(err => console.error("Недоступно:", err));
+  </script>
+  <script>
+    fetch('http://127.0.0.1:8000/api/accounts/login/', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+      },
+      body: JSON.stringify({
+        phone_number: "+998901234567",
+        password: "your_password"
+      })
+    })
+      .then(response => response.json())
+      .then(data => {
+        console.log('Токен:', data.token);
+      })
+      .catch(error => console.error('Ошибка входа:', error));
+  </script>
+  <script>
+    // Получение CSRF-токена из куки
+    function getCookie(name) {
+      let cookieValue = null;
+      if (document.cookie && document.cookie !== "") {
+        const cookies = document.cookie.split(";");
+        for (let i = 0; i < cookies.length; i++) {
+          const cookie = cookies[i].trim();
+          // Проверка имени куки
+          if (cookie.substring(0, name.length + 1) === name + "=") {
+            cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+            break;
+          }
+        }
+      }
+      return cookieValue;
+    }
+
+    const csrftoken = getCookie("csrftoken");
+
+    function sendApplication() {
+      const data = {
+        full_name: document.getElementById("full_name").value,
+        phone: document.getElementById("phone").value,
+        address: document.getElementById("address").value,
+        description: document.getElementById("description").value,
+      };
+
+      fetch("http://127.0.0.1:8000/api/applicationapplications/", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          "X-CSRFToken": csrftoken, // ✅ CSRF токен здесь!
+        },
+        body: JSON.stringify(data),
+      })
+        .then((res) => {
+          if (!res.ok) throw new Error("Ошибка");
+          return res.json();
+        })
+        .then((data) => {
+          alert("✅ Заявка успешно отправлена!");
+          console.log(data);
+        })
+        .catch((err) => {
+          alert("❌ Ошибка отправки.");
+          console.error(err);
+        });
+    }
+  </script>
+  <script>
+    // ✅ Чистый JavaScript без ошибок, API и Swagger
+    function showTime() {
+      const now = new Date();
+      const formatted = now.toLocaleTimeString();
+      document.getElementById('output').innerText = "Текущее время: " + formatted;
+    }
+  </script>
+  <!-- <script>
+    const chat = document.getElementById('chat');
+    const showBtn = document.getElementById('showBtn');
+    const hideBtn = document.getElementById('hideBtn');
+
+    showBtn.addEventListener('click', () => {
+      chat.classList.add('show');
+    });
+
+    hideBtn.addEventListener('click', () => {
+      chat.classList.remove('show');
     });
   </script> -->
 </body>
