--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="./1_CAT3JEY.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="csrf-token" content="{{ csrf_token }}">
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="apple-touch-icon" href="./1_CAT3JEY.png" />
+  <link rel="manifest" href="./1_CAT3JEY.png" />
   <link rel="stylesheet" href="../src/components/assents/css/all.min.css">
   <link rel="stylesheet" href="../src/components/assents/css/animate.css">
   <link rel="stylesheet" href="../src/components/assents/css/bootstrap.min.css">
